--- a/templates/general/empresas/empresa_form.html
+++ b/templates/general/empresas/empresa_form.html
@@ -87,6 +87,79 @@
 													</div>
 												
 												</fieldset>		
+									       		<fieldset>
+									       		<legend>CONFIGURACIÓN CORREO</legend>                        						
+									       		   <div class="col-xs-12">
+										       		   	<div class="row cerca">									       		   		
+											       		   		<div class="col-sm-10">{% bootstrap_field form.mail_servidor %}</div>
+											       		   		<div class="col-sm-2">{% bootstrap_field form.mail_puerto %}</div>										       		   		
+														</div>
+														<div class="row cerca">									       		   		
+											       		   		<div class="col-sm-6">{% bootstrap_field form.mail_usuario %}</div>
+											       		   		<div class="col-sm-6">{% bootstrap_field form.mail_password %}</div>										       		   		
+														</div>
+														<div class="row cerca">									       		   		
+											       		   		<div class="col-sm-12">{% bootstrap_field form.mail_cuerpo %}</div>										       		   		
+														</div>
+									       		   </div>
+									       		</fieldset>	
+									       							       	  
+
+									       	</div>
+									       	<div class="col-sm-6">
+									       		<fieldset>
+									       		<legend>CONFIGURACIÓN GENERAL SISTEMA</legend>                        						
+									       		   <div class="col-xs-12">
+									       		   	<div class="row cerca">
+									       		   		<div class="col-sm-6">
+										       		   		<div class="row cerca">
+										       		   			<label class="control-label col-sm-10">Días Venc. CPBs:</label>
+																<div class="col-sm-2">{% bootstrap_field form.dias_vencimiento_cpbs show_label=False  %}</div>		
+															</div>
+															<div class="row cerca">
+																<label class="control-label col-sm-10">Meses atrás Búsquedas:</label>
+																<div class="col-sm-2">{% bootstrap_field form.barra_busq_meses_atras show_label=False  %}</div>		
+															</div>
+														</div>
+														<div class="col-sm-6">															
+															<div class="row cerca">
+																<div class="col-sm-12">{% bootstrap_field form.pprincipal_aviso_tareas  %}</div>
+															</div>															
+															<div class="row cerca">
+																<div class="col-sm-12">{% bootstrap_field form.fp_facturas  %}</div>
+															</div>			
+															<div class="row cerca">
+																<div class="col-sm-12">{% bootstrap_field form.usa_impuestos  %}</div>
+															</div>
+															<div class="row cerca">
+																<div class="col-sm-12">{% bootstrap_field form.describe_impuestos  %}</div>
+															</div>
+														</div>
+													</div>
+														<div class="row cerca">
+																<label class="control-label col-sm-4">Nombre Impuesto 1:</label>
+																<div class="col-sm-8">{% bootstrap_field form.nombre_impuesto1 show_label=False  %}</div>		
+															</div>
+															<div class="row cerca">
+																<label class="control-label col-sm-4">Nombre Impuesto 2:</label>
+																<div class="col-sm-8">{% bootstrap_field form.nombre_impuesto2 show_label=False  %}</div>		
+															</div>
+														<div class="row cerca">
+															<label class="control-label col-sm-4">Pto. Venta x Defecto:</label>
+															<div class="col-sm-8">{% bootstrap_field form.pto_vta_defecto show_label=False  %}</div>		
+														</div>																
+														<div class="row cerca">
+															<label class="control-label col-sm-4">Tipo Logo en Factura:</label>
+															<div class="col-sm-8">{% bootstrap_field form.tipo_logo_factura show_label=False  %}</div>		
+														</div>
+														<div class="row cerca">
+																<label class="control-label col-sm-4">Ruta Logo en Factura:</label>
+																<div class="col-sm-8">{% bootstrap_field form.ruta_logo show_label=False  %}</div>		
+														</div>															
+									       		   	
+									       		   </div>
+									       		</fieldset>	
+									       		
 									       		{% if settings.DEBUG %}
 									       		<fieldset>
 									       		<legend>SISTEMA EN MODO DEBUG</legend>                        						
@@ -108,69 +181,7 @@
 													</div>
 									       		   </div>
 									       		</fieldset>	
-									       		{% endif %}											       	  
-
-									       	</div>
-									       	<div class="col-sm-6">
-									       		<fieldset>
-									       		<legend>CONFIGURACIÓN GENERAL SISTEMA</legend>                        						
-									       		   <div class="col-xs-12">
-									       		   	<div class="row cerca">
-									       		   		<div class="col-sm-6">
-										       		   		<div class="row cerca">
-										       		   			<label class="control-label col-sm-8">Días Venc. CPBs:</label>
-																<div class="col-sm-4">{% bootstrap_field form.dias_vencimiento_cpbs show_label=False  %}</div>		
-															</div>
-															<div class="row cerca">
-																<label class="control-label col-sm-8">Meses atrás Búsquedas:</label>
-																<div class="col-sm-4">{% bootstrap_field form.barra_busq_meses_atras show_label=False  %}</div>		
-															</div>
-															
-														</div>
-														<div class="col-sm-6">															
-															<div class="row cerca">
-																<div class="col-sm-12">{% bootstrap_field form.pprincipal_aviso_tareas  %}</div>
-															</div>															
-															<div class="row cerca">
-																<div class="col-sm-12">{% bootstrap_field form.fp_facturas  %}</div>
-															</div>			
-															<div class="row cerca">
-																<div class="col-sm-12">{% bootstrap_field form.usa_impuestos  %}</div>
-															</div>
-														</div>
-													</div>
-														<div class="row cerca">
-															<label class="control-label col-sm-6">Pto. Venta x Defecto:</label>
-															<div class="col-sm-6">{% bootstrap_field form.pto_vta_defecto show_label=False  %}</div>		
-														</div>																
-														<div class="row cerca">
-															<label class="control-label col-sm-6">Tipo Logo en Factura:</label>
-															<div class="col-sm-6">{% bootstrap_field form.tipo_logo_factura show_label=False  %}</div>		
-														</div>
-														<div class="row cerca">
-																<label class="control-label col-sm-6">Ruta Logo en Factura:</label>
-																<div class="col-sm-6">{% bootstrap_field form.ruta_logo show_label=False  %}</div>		
-														</div>															
-									       		   	
-									       		   </div>
-									       		</fieldset>	
-									       		<fieldset>
-									       		<legend>CONFIGURACIÓN CORREO</legend>                        						
-									       		   <div class="col-xs-12">
-										       		   	<div class="row cerca">									       		   		
-											       		   		<div class="col-sm-10">{% bootstrap_field form.mail_servidor %}</div>
-											       		   		<div class="col-sm-2">{% bootstrap_field form.mail_puerto %}</div>										       		   		
-														</div>
-														<div class="row cerca">									       		   		
-											       		   		<div class="col-sm-6">{% bootstrap_field form.mail_usuario %}</div>
-											       		   		<div class="col-sm-6">{% bootstrap_field form.mail_password %}</div>										       		   		
-														</div>
-														<div class="row cerca">									       		   		
-											       		   		<div class="col-sm-12">{% bootstrap_field form.mail_cuerpo %}</div>										       		   		
-														</div>
-									       		   </div>
-									       		</fieldset>	
-									       										       	
+									       		{% endif %}														       	
 								          </div> 
 						              </div>  
 								</div>
