--- a/templates/entidades/detalle.html
+++ b/templates/entidades/detalle.html
@@ -51,7 +51,17 @@
   </table>
                                
 
-          
+ <div class="modal-buttons">
+    <div class="row">
+        <div class="col-xs-6">
+         <button data-dismiss="modal" class="btn btn-sm pull-left btn-sm btn-danger" type="button">
+              <i class="fa fa-times"></i> Cancelar         </button>
+        </div>
+        
+      
+      </div>
+    
+</div         
        
 {% endblock main %}        
 
