--- a/templates/productos/producto_precios.html
+++ b/templates/productos/producto_precios.html
@@ -36,6 +36,7 @@
                     </div>
                     <div class="btn-group " style="float:left;margin-right:20px;margin-bottom:10px;"> 
                     <button class="btn btn-sm green-meadow" value="" style="margin-right:20px;" id="btnActualizar">Actualizar Precios</button>
+                    <button class="btn btn-sm green-meadow" value="" style="margin-right:20px;" id="btnImprimirCBS">Imprimir Cód.Barras</button>
                     
                     </div>               
                     <table id="dataTables-lprecios" class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">         
