--- a/templates/productos/producto_stock.html
+++ b/templates/productos/producto_stock.html
@@ -8,7 +8,10 @@
     <script src="{% static 'js/scripts/scripts_prod_stock.js'%}?{% now "Ymd"%}" type="text/javascript"></script>   
 {% endblock %}
 {% block main %}   
-
+ <div id="cargando" class="cargando" >
+                <span class="cargando-txt">CARGANDO...</span>
+                <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
+        </div>
 <div class="col-md-12">   
     <div class="portlet box toolbar_green">
         <div class="portlet-title">
@@ -37,7 +40,7 @@
         <button class="btn btn-sm green-meadow" value="" style="margin-right:20px;" id="btnActualizar">Actualizar Stock</button>    
     </div>               
 
-    <table id="dataTables-stock" class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">         
+    <table id="dataTables-stock" style="display:none;" class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">         
         <thead>
             <tr>                                                               
                 <th class="no-sort text-center"></th>
@@ -234,6 +237,9 @@ var tabla = $('#dataTables-stock').DataTable({
                     className: 'btnToolbar',                    
                 },
             ],
+             PreDrawCallback:function(){
+            $("#cargando").show();
+            },
             initComplete: function () {
                // this.api().columns().every( function () {[0, 1, 9]
                 this.api().columns([3,4]).every( function () {
@@ -255,7 +261,9 @@ var tabla = $('#dataTables-stock').DataTable({
                         select.append( '<option value="'+d+'">'+d+'</option>' )
                     } );
                 } );
-
+                $("#dataTables-stock").show();
+                  this.fnAdjustColumnSizing();
+                $("#cargando").hide();
             },
             footerCallback: function ( row, data, start, end, display ) {
             var api = this.api(), data;
