pantallas y generador de codigo de barras

--- a/templates/general/lista_pto_vta.html
+++ b/templates/general/lista_pto_vta.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block main %} 
 
-        <div class="col-md-12">
+        <div class="col-md-12 cerca">
             <div class="portlet box toolbar_blue">
                 <div class="portlet-title">
                     <div class="caption bold">
