--- a/templates/productos/lista_productos.html
+++ b/templates/productos/lista_productos.html
@@ -9,7 +9,7 @@
 </div>
 
 
-<div class="col-md-12">
+<div class="col-md-12 cerca">
     <div class="portlet box toolbar_blue">
         <div class="portlet-title">
             <div class="caption bold">
@@ -32,17 +32,17 @@
         class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">
         <thead>
             <tr>
-                <th></th>
-                <th class="imprimir">Código</th>
-                <th class="imprimir">Nombre</th>
-                <th class="imprimir">Categoría</th>
-                <th class="imprimir">TipoProd.</th>
-                <th class="imprimir">Unidad</th>
-                <th class="imprimir">Mostrar en</th>
-                <th class="imprimir">IVA</th>
-                <th class="imprimir text-center">Lleva Stock</th>
-                <th class="imprimir">Descripción</th>
-                <th class="imprimir">Cód.Barras</th>
+                <th data-priority="1"></th>
+                <th class="imprimir" data-priority="1">Código</th>
+                <th class="imprimir" data-priority="1">Nombre</th>
+                <th class="imprimir" data-priority="1">Categoría</th>
+                <th class="imprimir" data-priority="1">TipoProd.</th>
+                <th class="imprimir" data-priority="1">Unidad</th>
+                <th class="imprimir" data-priority="3">Mostrar en</th>
+                <th class="imprimir" data-priority="1">IVA</th>
+                <th class="imprimir text-center" data-priority="3">Lleva Stock</th>
+                <th class="imprimir" data-priority="4">Descripción</th>
+                <th class="imprimir" data-priority="1">Cód.Barras</th>
             </tr>
         </thead>
         <tbody>
