--- a/templates/egresos/compras/cpb_compra_listado.html
+++ b/templates/egresos/compras/cpb_compra_listado.html
@@ -14,7 +14,7 @@
                         <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
                     </div>    
  
-          <div class="col-md-12">                      
+          <div class="col-md-12 cerca">                      
             <div class="portlet box">
                 <div class="portlet-title encabezado toolbar_blue">
                     <div class="caption bold">
