--- a/templates/entidades/lista_proveedores.html
+++ b/templates/entidades/lista_proveedores.html
@@ -8,7 +8,7 @@
                         <span class="cargando-txt">CARGANDO...</span>
                         <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
                     </div>
-  <div class="col-md-12">
+  <div class="col-md-12 cerca">
             <div class="portlet box toolbar_blue">
                 <div class="portlet-title">
                     <div class="caption bold">
