--- a/templates/general/cta_cte/cta_cte_clientes.html
+++ b/templates/general/cta_cte/cta_cte_clientes.html
@@ -7,8 +7,8 @@
 
 {% block main %} 
     
-        <div class="row">
-          <div class="col-md-12">   
+        <div class="row ">
+          <div class="col-md-12 cerca">   
             <div class="portlet box blue-hoki">
                 <div class="portlet-title">
                     <div class="caption">
