--- a/templates/general/empresas/empresa_listado.html
+++ b/templates/general/empresas/empresa_listado.html
@@ -5,7 +5,7 @@
 {% block main %} 
     
         <div class="row">
-          <div class="col-md-12">   
+          <div class="col-md-12 cerca">   
             <div class="portlet box blue-hoki">
                 <div class="portlet-title">
                     <div class="caption">
