--- a/templates/general/lista_formapago.html
+++ b/templates/general/lista_formapago.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 {% block main %} 
 
-          <div class="col-md-12">
+          <div class="col-md-12 cerca">
             <div class="portlet box toolbar_blue">
                 <div class="portlet-title">
                     <div class="caption bold">
