--- a/templates/general/movimientos/movimientos_listado.html
+++ b/templates/general/movimientos/movimientos_listado.html
@@ -16,7 +16,7 @@
         </div>
                           
 
-          <div class="col-md-12">   
+          <div class="col-md-12 cerca">   
             <div class="portlet box toolbar_red">
                 <div class="portlet-title">
                     <div class="caption bold">
