--- a/templates/ingresos/cobranzas/cpb_rec_cobranza_listado.html
+++ b/templates/ingresos/cobranzas/cpb_rec_cobranza_listado.html
@@ -12,7 +12,7 @@
             <span class="cargando-txt">CARGANDO...</span>
             <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
         </div>
-        <div class="col-md-12">   
+        <div class="col-md-12 cerca">   
             <div class="portlet box toolbar_green">
                 <div class="portlet-title">
                     <div class="caption bold">
