--- a/templates/ingresos/presupuesto/cpb_presup_listado.html
+++ b/templates/ingresos/presupuesto/cpb_presup_listado.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block main %} 
 
-          <div class="col-md-12">           
+          <div class="col-md-12 cerca">           
             <div class="portlet box toolbar_violet">
                 <div class="portlet-title">
                     <div class="caption bold">
