--- a/templates/ingresos/ventas/cpb_venta_listado.html
+++ b/templates/ingresos/ventas/cpb_venta_listado.html
@@ -13,7 +13,7 @@
                 <span class="cargando-txt">CARGANDO...</span>
                 <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
         </div>
-        <div class="col-md-12 "> 
+        <div class="col-md-12 cerca"> 
 
             <div class="portlet box toolbar_blue">
                 <div class="portlet-title ">
