--- a/templates/productos/producto_stock.html
+++ b/templates/productos/producto_stock.html
@@ -12,7 +12,7 @@
                 <span class="cargando-txt">CARGANDO...</span>
                 <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
         </div>
-<div class="col-md-12">   
+<div class="col-md-12 cerca">   
     <div class="portlet box toolbar_green">
         <div class="portlet-title">
             <div class="caption bold">   <i class="fa fa-cubes"></i> STOCK PRODUCTOS <small>consulta y actualización</small></div>
