--- a/templates/reportes/contables/cuentas.html
+++ b/templates/reportes/contables/cuentas.html
@@ -5,7 +5,7 @@
 {% load humanize %}
 {% block main %}     
 
-  <div class="col-md-12">   
+  <div class="col-md-12 cerca">   
         <div class="portlet box toolbar_blue">
             <div class="portlet-title">
                 <div class="caption bold"><i class="fa fa-bank"></i>SALDOS CUENTAS</div>
