--- a/templates/reportes/contables/seguimiento_cheques.html
+++ b/templates/reportes/contables/seguimiento_cheques.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block main %} 
     
-<div class="col-sm-12">   
+<div class="col-sm-12 cerca">   
       <div class="portlet box toolbar_blue">
             <div class="portlet-title">
                 <div class="caption bold"><i class="icon-calendar"></i>SEGUIMIENTO CHEQUES</div>
