--- a/templates/reportes/varios/historico_productos.html
+++ b/templates/reportes/varios/historico_productos.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block main %}   
 
-        <div class="col-md-12">   
+        <div class="col-md-12 cerca">   
             <div class="portlet box toolbar_green">
                 <div class="portlet-title">
                     <div class="caption bold"><i class="fa fa-cubes"></i>HISTÓRICO MOVIMIENTOS STOCK <small>consulta y detalles</small></div>
