--- a/templates/reportes/varios/vencimientos_cpbs.html
+++ b/templates/reportes/varios/vencimientos_cpbs.html
@@ -14,7 +14,7 @@
                 <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
         </div>
 
-          <div class="col-md-12">   
+          <div class="col-md-12 cerca">   
             <div class="portlet box toolbar_blue">
                 <div class="portlet-title">
                     <div class="caption bold">
