--- a/templates/usuarios/lista_usuarios.html
+++ b/templates/usuarios/lista_usuarios.html
@@ -4,7 +4,7 @@
 {% load humanize %}
 {% block main %}  
       
-        <div class="col-md-12">
+        <div class="col-md-12 cerca">
             
             <div class="portlet box toolbar_blue">
                 <div class="portlet-title">
