--- a/templates/productos/precios_codbars.html
+++ b/templates/productos/precios_codbars.html
@@ -44,7 +44,7 @@
          </tr>
          <tr>
         {% endif %}
-        <td align="center" class="borde_abajo borde_arriba borde_der borde_izq">
+        <td align="center" class="borde_abajo borde_arriba borde_der borde_izq" width="100">
           <img src="data:image/png;base64,{{c.codbar}}" alt="afip" width="100%" height="25"  ><br>    
               {{c.codigo_barras}}<br>
               {% if c.detalle %}<span class="pie_sistema">{{c.detalle}}</span><br>{% endif %}
