imprimit codigos_barras

--- a/templates/general/empresas/empresa_form.html
+++ b/templates/general/empresas/empresa_form.html
@@ -134,6 +134,12 @@
 															<div class="row cerca">
 																<div class="col-sm-12">{% bootstrap_field form.describe_impuestos  %}</div>
 															</div>
+															<div class="row cerca">
+																<div class="col-sm-12">{% bootstrap_field form.codbar_precio  %}</div>
+															</div>
+															<div class="row cerca">
+																<div class="col-sm-12">{% bootstrap_field form.codbar_detalle  %}</div>
+															</div>
 														</div>
 													</div>
 														<div class="row cerca">
