--- a/templates/productos/precios_codbars.html
+++ b/templates/productos/precios_codbars.html
@@ -34,35 +34,33 @@
 </head>
 
 <body>  
-<div id="page-header">
-    
-</div>
-<table class="tabla" align="center" border="0" width="100%" cellspacing="0" > 
-    <tr>
-    {% for c in precios %}
-        {% if forloop.counter0|divisibleby:5 %}                              
-         </tr>
-         <tr>
-        {% endif %}
-        <td align="center" class="borde_abajo borde_arriba borde_der borde_izq" width="100">
-          <img src="data:image/png;base64,{{c.codbar}}" alt="afip" width="100%" height="25"  ><br>    
-              {{c.codigo_barras}}<br>
-              {% if c.detalle %}<span class="pie_sistema">{{c.detalle}}</span><br>{% endif %}
-              {% if c.precio %}${{c.precio}}{% endif %} 
-        </td>
-    
-    {% endfor precios %}
-    </tr>    
-</table>
+  <div id="page-header">    
+  </div>
 
-<div id="page-footer">
-  <table class="tabla" width="100%" border="0" cellspacing="0">
-    <tr>
-      <td width="90%" class="pie_sistema"><img alt="" class="pie_logo" src="{% static 'images/logo_iron.png' %}"/>&nbsp;&nbsp;IRONweb Gestión & Facturación - {{fecha|date:'d/m/Y'}} </td>
-      <td width="10%" class="pie_texto"><pdf:pagenumber /> de <pdf:pagecount/> </td>
-    </tr>
-  </table>    
-</div>
+  <table class="tabla" align="center" border="0" width="100%" cellspacing="0" > 
+      <tr>
+      {% for c in precios %}
+          {% if forloop.counter0|divisibleby:5 %}                              
+           </tr>
+           <tr>
+          {% endif %}
+          <td align="center" class="borde_abajo borde_arriba borde_der borde_izq" width="100">
+            <img src="data:image/png;base64,{{c.codbar}}" alt="afip" width="100%" height="25"  ><br>    
+                {{c.codigo_barras}}<br>
+                {% if mostrar_detalle %}<span class="pie_sistema">{{c.detalle}}</span><br>{% endif %}
+                {% if mostrar_precio %}${{c.precio}}{% endif %} 
+          </td>    
+      {% endfor precios %}
+      </tr>    
+  </table>
 
+  <div id="page-footer">
+    <table class="tabla" width="100%" border="0" cellspacing="0">
+      <tr>
+        <td width="90%" class="pie_sistema"><img alt="" class="pie_logo" src="{% static 'images/logo_iron.png' %}"/>&nbsp;&nbsp;IRONweb Gestión & Facturación - {{fecha|date:'d/m/Y'}} </td>
+        <td width="10%" class="pie_texto"><pdf:pagenumber /> de <pdf:pagecount/> </td>
+      </tr>
+    </table>    
+  </div>
 </body>
 </html>
