--- a/staticfiles/css/components.css
+++ b/staticfiles/css/components.css
@@ -3376,7 +3376,7 @@ name .popover .popover-content,
     line-height: 1.428571429;
     text-decoration: none;
     background-color: #fff;
-    border: 1px solid #fff;
+    border: 1px solid #b7aeae;
     color: #000000;
 }
 
@@ -3384,5 +3384,5 @@ name .popover .popover-content,
     color: #999;
     cursor: not-allowed;
     background-color: #fff;   
-    border:1px solid #e4e4e4;
+    border: 1px solid #b7aeae; 
 }
