Impresion detalle cpbs

--- a/templates/general/varios/cpb_ver_dropdown.html
+++ b/templates/general/varios/cpb_ver_dropdown.html
@@ -1,3 +1,15 @@
 
-<a href="{% url 'comprobante_ver' id=cpb.id %}"  title="Ver Detalle" class="modal-detail" data-modal-head="DETALLE {{cpb.cpb_tipo.nombre|upper}} {{cpb}}   Fecha: {{cpb.fecha_cpb|date:'d/m/Y'}}" data-modal-callback="reload">
+<a {% if cpb.cpb_tipo.tipo == 4 or cpb.cpb_tipo.tipo == 7 %}
+		href="{% url 'recibo_ver' id=cpb.id %}"  
+	{% elif cpb.cpb_tipo.tipo == 2 or cpb.cpb_tipo.tipo == 3 %}
+		href="{% url 'ncredndeb_ver' id=cpb.id %}"
+	{% elif cpb.cpb_tipo.tipo == 5 %}
+		href="{% url 'remito_ver' id=cpb.id %}"
+	{% elif cpb.cpb_tipo.tipo == 6 %}
+		href="{% url 'presup_ver' id=cpb.id %}"
+	{% elif c.tipo.tipo == 8 %}
+		href="{% url 'movim_ver' id=c.cpb_id %}"
+	{% else %}
+		href="{% url 'comprobante_ver' id=cpb.id %}"
+	{% endif %}  title="Ver Detalle" class="modal-detail" data-modal-head="DETALLE {{cpb.cpb_tipo.nombre|upper}} {{cpb}}   Fecha: {{cpb.fecha_cpb|date:'d/m/Y'}}" data-modal-callback="reload">
 	<i class="icon-screen-desktop"></i> Ver Detalle</a>
