--- a/templates/ingresos/ventas/cpb_venta_listado.html
+++ b/templates/ingresos/ventas/cpb_venta_listado.html
@@ -100,10 +100,10 @@
                                                     {% endif %}   
 
                                                 {% elif cpb.estado.pk < 3 %}
-                                                    {% if cpb.cobranzas == 0 %}
+                                                    
                                                         <li><a href="#" 
                                                         onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA ANULAR EL COMPROBANTE ACTUAL?',transition:'fade','onok': function(){ window.location.href = '{% url 'cpb_anular_reactivar' id=cpb.pk estado=3  %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('ANULAR/REACTIVAR COMPROBANTE'); alerta.show(); return true;" ><i class="icon-dislike"></i>Anular</a></li>
-                                                    {% endif %}
+                                                   
                                                     {% if cpb.cpb_tipo.facturable %}
                                                         {% if 'cpb_ventas_cae' in permisos_grupo %}
                                                             <li role="separator" class="divider"></li>
@@ -117,11 +117,11 @@
                                                         {% endif %}
                                                     {% endif %}
                                                 {% endif %} 
-                                                {% if cpb.cobranzas == 0 %}
+                                                
                                                      <li><a href="#" 
-                                                        onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA ELIMINAR LA VENTA SELECCIONADA?',transition:'fade','onok': function(){ window.location.href = '{% url 'cpb_venta_eliminar' id=cpb.pk %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('ELIMINAR COMPROBANTE'); alerta.show(); return true;"><i class="icon-trash"></i>Eliminar</a>
+                                                        onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA ELIMINAR LA VENTA SELECCIONADA? (recuerde eliminar las cobranzas asociadas)',transition:'fade','onok': function(){ window.location.href = '{% url 'cpb_venta_eliminar' id=cpb.pk %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('ELIMINAR COMPROBANTE'); alerta.show(); return true;"><i class="icon-trash"></i>Eliminar</a>
                                                     </li>                                                 
-                                                {% endif %}                                                               
+                                                                                                               
                                                {% endif %}                        
                                                
                                             {% endif %}
