--- a/templates/login.html
+++ b/templates/login.html
@@ -23,13 +23,20 @@
 		<form class="login-form" accept-charset="UTF-8" role="form" action="/login/" method="post">
 	       {% csrf_token %}
 
-			<div class="form-group">				
+			<div class="form-group">
+			 <div class="input-group">						
+				<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
 				<label class="control-label visible-ie8 visible-ie9">Usuario</label>
 				<input class="form-control form-control-solid placeholder-no-fix" type="text" required autofocus autocomplete="off" placeholder="Usuario" name="username"/>
+			 </div>
 			</div>
 			<div class="form-group">
+			 <div class="input-group">			
+				
+				<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
 				<label class="control-label visible-ie8 visible-ie9">Contraseña</label>
 				<input class="form-control form-control-solid placeholder-no-fix" type="password" required placeholder="Contraseña" name="password"/>
+			 </div>
 			</div>
 			
 			<div class="form-actions">
